--- a/Talleres/css/talleres.css
+++ b/Talleres/css/talleres.css
@@ -99,13 +99,9 @@ header{
     opacity: 1;
 }
 
-
-
 .galeria{
     font-family: 'open sans';
-    margin-top: 70px;
 }
-
 
 .galeria h1{
     text-align: center;
@@ -132,13 +128,12 @@ header{
     position: relative;
     height:250px;
     margin-bottom:5px;
-    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, .75);
+    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, .75)
 }
 .imagen img{
     width: 100%;
     height:100%;
     object-fit: cover;
-    
 }
 
 .overlay{
